general formatting - sonar fixes